# testePratico_fastAPI

./: README.md
toDo_list/: pyproject.toml
toDo_list/tests/: test_app.py
toDo_list/todo_list/: app.py
